GNOME Bugzilla – Bug 638732
[regression] libgnomekbd fails with .Xmodmap
Last modified: 2012-09-26 00:01:09 UTC
It seesm to be trivial but it took some time to find out. g-s-d accepted .Xmodmap files to tweak keyboard. However it is no longer the case with libgnomekbd as it only search for .xmodmap and silently fails if only .Xmodmap is present. As it is not present in NEWS it cause some confusion - while move of file is trivial fix it would help if both files were checked (as it may cause some confusion in future).
Ok, committed. Easy one. Please check from git.
Reopened for regression in 2.91.91 (this time for .xmodmap)
both files are analyzed. Does it work ok for .Xmodmap?
(In reply to comment #3) > both files are analyzed. Does it work ok for .Xmodmap? Yes. It does.
Could you please run gnome-settings-daemon with envvar XKL_DEBUG=150 It should show (at some point) "Loading custom xmodmap file ...." Will it see that? What would be the difference for .Xmodmap and .xmodmap?
In case of .Xmodmap: [1300734979,150,gkbd-keyboard-config.c:gkbd_keyboard_config_activate/] Loading custom xmodmap file /home/mpiechotka/.Xmodmap
Could you please add the following line to libgnomekbd/gkbd-keyboard-config.c after line 591 (before g_file_test call): xkl_debug (150, "Checking custom xmodmap file[%d] %s\n", i, xmodmap_file); then rebuild and reinstall libgnomekbd. What do you see on output of g-s-d (again, with XKL_DEBUG=150) - for .xmodmap and for .Xmodmap?
Closing - I no longer use xmodmap but it worked 3.4-ish version.