Trying two xmodmap files: .xmodmap and .Xmodmap

http://bugzilla.gnome.org/show_bug.cgi?id=638732